--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,21 @@ h1 {
 	font-family: TS-Med, sans-serif;
 }
 
+h3 {
+	font-size: 24px;
+	font-family: TS-Reg, sans-serif;
+}
+
+h2 {
+	font-size: 28px;
+	font-family: TS-Med, sans-serif;
+}
+
+h4 {
+	font-size: 18px;
+	font-family: TS-Med, sans-serif;
+}
+
 h1 span {
 	color: #ff5d5d;
 }
@@ -153,11 +168,6 @@ h1 span {
 	justify-content: space-between;
 }
 
-.description h2 {
-	font-size: 28px;
-	font-family: TS-Med, sans-serif;
-}
-
 .description p {
 	margin: 30px 0 50px;
 	width: 568px;
@@ -165,6 +175,11 @@ h1 span {
 
 .carte {
 	width: 354px;
+}
+
+.carte h3 {
+	padding: 20px;
+	width: 90%;
 }
 
 .carte .text {
@@ -175,13 +190,6 @@ h1 span {
 .carte img {
 	width: 354px;
 	border-radius: 0 0 10px 10px;
-}
-
-.carte h3 {
-	font-size: 24px;
-	font-family: TS-Reg, sans-serif;
-	padding: 20px;
-	width: 90%;
 }
 
 .carte p {
@@ -200,4 +208,97 @@ h1 span {
 	border: none;
 	font-family: TS-Med, sans-serif;
 	margin: 20px;
+}
+
+.immanquables h2 {
+	margin-top: 40px;
+}
+
+.immanquables .caroussel {
+	display: flex;
+	margin: 20px 0;
+	overflow: hidden;
+	scroll-snap-type: x mandatory;
+	overflow-x: scroll;
+	-webkit-overflow-scrolling: touch;
+	scroll-behavior: smooth; /* Contrôle le comportement du scroll */
+	scroll-snap-align: start;
+}
+
+.immanquables .group {
+	display: flex;
+}
+
+.immanquables .group .lieux {
+	margin-top: 20px;
+	width: 100%;
+}
+
+.immanquables .group .lieux p {
+	margin: 20px 0;
+	width: 272px;
+}
+
+.immanquables .group .lieux a {
+	margin: 20px 0 40px;
+	font-size: 12px;
+}
+
+.immanquables .group .lieux a {
+	color: black;
+	transition: all 0.3s ease-in-out;
+}
+
+.immanquables .group .lieux a:hover {
+	opacity: 0.6;
+}
+
+.immanquables .group .lieux a span {
+	margin: 0 5px;
+}
+
+.immanquables .caroussel-container {
+	display: flex;
+	scroll-snap-type: x mandatory;
+}
+
+.immanquables .caroussel-container img {
+	width: 269px;
+	object-fit: cover;
+	margin-right: 15px;
+}
+
+.immanquables .caroussel-container .caroussel-item {
+	position: relative;
+	transition: all 0.3s ease-in-out;
+	z-index: 1;
+}
+.immanquables .caroussel-container .caroussel-item a {
+	text-decoration: none;
+	cursor: pointer;
+}
+.immanquables .caroussel-container .caroussel-item:hover img {
+	opacity: 0.8;
+}
+.immanquables .caroussel-container .caroussel-item:hover h4 {
+	opacity: 0.8;
+}
+.immanquables .caroussel-container .caroussel-item:hover h4 {
+	text-decoration: underline;
+}
+
+.immanquables .caroussel-container .caroussel-item h4 {
+	margin: 10px 0;
+}
+.immanquables .caroussel-container .caroussel-item p {
+	font-size: 14px;
+	color: #333333;
+	text-decoration: none;
+}
+.immanquables .caroussel-container .caroussel-item i {
+	position: absolute;
+	top: 5%;
+	right: 10%;
+	z-index: 2;
+	cursor: pointer;
 }
