--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,23 @@
 	box-sizing: border-box;
 }
 
-@media (max-width: 1184px) {
+body {
+	overflow: hidden;
+}
+
+@media (max-width: 1920px) {
 	body {
-		width: 1136px;
-		margin: 0 auto;
 		font-family: TS-Reg, sans-serif;
 		font-size: 16px;
 	}
 
-	header {
+	.container {
+		max-width: 1136px;
+		margin: 0 auto;
+		padding: 0 20px;
+	}
+
+	header .container {
 		display: flex;
 		justify-content: space-between;
 
@@ -134,7 +142,7 @@
 	}
 
 	.photos img {
-		width: 115%;
+		width: 100%;
 		object-fit: cover;
 		transition: all 0.3s ease-in-out;
 	}
@@ -146,7 +154,7 @@
 	.photos .column img {
 		height: 214px;
 		object-fit: cover;
-		width: 480px;
+		width: 100%;
 	}
 
 	.fil-ariane {
@@ -307,14 +315,84 @@
 		z-index: 2;
 		cursor: pointer;
 	}
+
+	.modal {
+		display: none;
+		background-color: rgba(0, 0, 0, 0.8);
+		height: 100vh;
+		width: 100vw;
+		position: fixed;
+		top: 0;
+		z-index: 2;
+	}
+
+	.modal .form-container {
+		color: rgba(0, 0, 0, 0.8);
+		display: flex;
+		margin: 0 auto;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.modal .form-container .form {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-color: white;
+		padding: 60px 20px;
+		border-radius: 20px;
+	}
+
+	.modal .form-container .form i {
+		color: rgba(0, 0, 0, 0.5);
+		font-size: 20px;
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		cursor: pointer;
+	}
+
+	.modal .form-container p {
+		font-size: 24px;
+		font-family: TS-Med, sans-serif;
+		font-weight: bold;
+		margin-bottom: 30px;
+	}
+
+	form {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	form input,
+	textarea {
+		width: 60%;
+		margin: 10px 0;
+		outline: none;
+		border: solid 2px #333333;
+		padding: 16px 10px;
+		font-size: 16px;
+		font-family: TS-Med, sans-serif;
+	}
+
+	input[type="submit"] {
+		background-color: #35e1a1;
+		color: white;
+		width: 200px;
+		padding: 10px;
+		font-weight: bold;
+		border: none;
+		border-radius: 6px;
+		font-family: TS-Med, sans-serif;
+	}
 }
 
 @media (max-width: 1024px) {
-	body {
-		width: 95%;
-		margin: 0 auto;
-	}
-
 	.navigation {
 		flex-wrap: wrap;
 		height: 150px;
@@ -335,15 +413,19 @@
 
 	.photos .column img {
 		height: 185px;
-		width: 402px;
+		width: 100%;
+	}
+
+	.description {
+		flex-wrap: wrap;
 	}
 
 	.immanquables .group .lieux p {
-		width: 232px;
+		width: 100%;
 	}
 
 	.caroussel .caroussel-container .caroussel-item img {
-		width: 229px;
+		width: 100%;
 	}
 }
 
@@ -368,14 +450,13 @@
 		height: 276px;
 	}
 	.photos img {
-		width: 155%;
+		width: 100%;
 		height: 276px;
 	}
 
 	.photos .column img {
 		height: 137px;
-		width: 239px;
-		margin-left: 5px;
+		width: 100%;
 	}
 
 	.description {
